# tasca3

./: pyproject.toml
models/: dt.pck  knn.pck  lr.pck  svm.pck
notebooks/: client.ipynb
tasca3/: app.py  classificacio.py
